# MediaWaiter

./: .gitignore  .travis.yml  CORRECT_FLOW.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  JSON_ENDPOINTS.md  Makefile  QUICKSTART.md  README.md  RUNNING.md  bower.json  dev_requirements.txt  devenv.nix  devenv.yaml  docker-compose.test.yml  docker-compose.yml  fabfile.py  flake.nix  gunicorn.conf.py  log.py  node-packages.nix  package-lock.json  package.json  pyproject.toml  requirements.txt  run-tests.sh  settings.py  setup.cfg  test_requirements.txt  tests.py  travis_settings  utils.py  waiter.py
.github/workflows/: pr.yml  publish.yml
configs/: docker_settings.py
logs/: .gitignore
server/: .gitignore  uwsgi.ini  waiter.conf
src/mediawaiter/: gunicorn.conf.py  log.py  main.py  settings.py  utils.py  waiter.py
src/mediawaiter/templates/: error.html  watch_party.html
static/: package-lock.json  package.json
static/assets/: dark.css  home.css  waiter.css  waiter_v2.js
static/assets/DataTables-1.10.4/media/css/: jquery.dataTables.css
static/assets/css/: darkly.css  dataTables.bootstrap.css  dataTables.responsive.css  jquery.dataTables.css  waiter.css
static/assets/js/: waiter.js  waiter_v2.js
templates/: display.html  error.html  video.html  watch_party.html
tests/: conftest.py  test_utils.py  test_waiter.py
