[project]
name = "mediawaiter"
version = "0.1.0"
description = "App to serve HTML5 videos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "requests>=2.32.3",
    "secure>=0.3.0",
]

[dependency-groups]
dev = [
    "bpython>=0.25",
    "pdbpp>=0.11.7",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
]
