[project]
name = "mediawaiter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kevin Yokley", email = "kyokley@mars" }
]
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "pyjwt>=2.10.1",
    "requests>=2.32.3",
    "secure>=0.3.0",
]

[dependency-groups]
dev = [
    "bpython>=0.25",
    "pdbpp>=0.11.7",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
]

[project.scripts]
mediawaiter = "src.mediawaiter.main:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "--ignore=result"
