[project]
name = "mediawaiter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "pyjwt>=2.10.1",
    "requests>=2.32.3",
    "secure>=0.3.0",
]

[dependency-groups]
dev = [
    "bpython>=0.25",
    "pdbpp>=0.11.7",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
]

[project.scripts]
mw = "src.mediawaiter.main:main"

[tool.pytest.ini_options]
addopts = "--ignore=result"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
